Add cluster and mesh models
